Fix CI builds